<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/nombreContacto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/editNombre"
                android:textSize="24sp"
                android:fontFamily="@font/quicksand_medium"/>

            <EditText
                android:id="@+id/numeroContacto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/nombreContacto"
                android:layout_marginTop="30dp"
                android:hint="@string/editNumero"
                android:textSize="24sp"
                android:inputType="phone"
                android:fontFamily="@font/quicksand_medium"/>

            <EditText
                android:id="@+id/prioridadContacto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/numeroContacto"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/editPrioridad"
                android:textSize="24sp"
                android:inputType="number"
                android:fontFamily="@font/quicksand_medium"/>

            <Button
                android:id="@+id/guardar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prioridadContacto"
                android:layout_marginTop="10dp"
                android:onClick="saveNote"
                android:background="@drawable/backbtn"
                android:text="@string/guardar"
                android:fontFamily="@font/quicksand_medium"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/borrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/prioridadContacto"
                android:layout_alignBottom="@+id/guardar"
                android:layout_marginTop="10dp"
                android:onClick="deleteContact"
                android:background="@drawable/backbtn"
                android:text="@string/borrar"
                android:fontFamily="@font/quicksand_medium"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_person_add_white_60dp"
            app:fabCustomSize="80dp"
            app:maxImageSize="50dp"
            android:scaleType="center"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>